# FunderAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  GrantFlow.md  README.md  pyproject.toml  render.yaml
app/: main.py
app/agents/: graph.py  nodes.py  prompts.py  state.py
app/api/: routes.py
app/config/: settings.py
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: DemoView.tsx  EvaluateView.tsx  ResultTabs.tsx
